AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = Service.vcproj Service.rc

lib_LTLIBRARIES = libMgCommon.la

libMgCommon_la_SOURCES = \
  Controller/ServiceControllerBuild.cpp \
  CoordinateSystem/ServiceCoordinateSystemBuild.cpp \
  Data/ServiceDataBuild.cpp \
  Exception/ServiceExceptionBuild.cpp \
  Geometry/ServiceGeometryBuild.cpp \
  MapLayer/ServiceMapLayerBuild.cpp \
  Net/ServiceNetBuild.cpp \
  Services/ServiceServicesBuild.cpp \
  System/ServiceSystemBuild.cpp \
  Util/ServiceUtilBuild.cpp

include_SOURCES = \
  Controller/Controller.cpp \
  Controller/DwfController.cpp \
  Controller/HtmlController.cpp \
  CoordinateSystem/CoordinateSystem.cpp \
  CoordinateSystem/CoordinateSystemFactory.cpp \
  CoordinateSystem/CoordinateSystemMeasure.cpp \
  CoordinateSystem/CoordinateSystemTransform.cpp \
  Data/BatchPropertyCollection.cpp \
  Data/BlobProperty.cpp \
  Data/BooleanProperty.cpp \
  Data/ByteProperty.cpp \
  Data/ByteReader.cpp \
  Data/ByteSink.cpp \
  Data/ByteSource.cpp \
  Data/ByteSourceFileImpl.cpp \
  Data/ByteSourceMemoryImpl.cpp \
  Data/ByteSourceSocketStreamImpl.cpp \
  Data/ByteSourceStreamImpl.cpp \
  Data/ClobProperty.cpp \
  Data/Collection.cpp \
  Data/Color.cpp \
  Data/ConfigurationSectionCollection.cpp \
  Data/DateTime.cpp \
  Data/DateTimeProperty.cpp \
  Data/DisposableCollection.cpp \
  Data/DoubleProperty.cpp \
  Data/Int16Property.cpp \
  Data/Int32Property.cpp \
  Data/Int64Property.cpp \
  Data/IntCollection.cpp \
  Data/MimeType.cpp \
  Data/NamedCollection.cpp \
  Data/NullableProperty.cpp \
  Data/Property.cpp \
  Data/PropertyCollection.cpp \
  Data/PropertyDefinition.cpp \
  Data/PropertyDefinitionCollection.cpp \
  Data/SerializableCollection.cpp \
  Data/SingleProperty.cpp \
  Data/StringCollection.cpp \
  Data/StringProperty.cpp \
  Data/StringPropertyCollection.cpp \
  Exception/ApplicationException.cpp \
  Exception/ArgumentOutOfRangeException.cpp \
  Exception/ArrayTypeMismatchException.cpp \
  Exception/AuthenticationFailedException.cpp \
  Exception/ClassNotFoundException.cpp \
  Exception/ConfigurationException.cpp \
  Exception/ConfigurationLoadFailedException.cpp \
  Exception/ConfigurationSaveFailedException.cpp \
  Exception/ConnectionFailedException.cpp \
  Exception/ConnectionNotOpenException.cpp \
  Exception/CoordinateSystemComputationFailedException.cpp \
  Exception/CoordinateSystemConversionFailedException.cpp \
  Exception/CoordinateSystemInitializationFailedException.cpp \
  Exception/CoordinateSystemMeasureFailedException.cpp \
  Exception/CoordinateSystemTransformFailedException.cpp \
  Exception/DateTimeException.cpp \
  Exception/DbException.cpp \
  Exception/DbXmlException.cpp \
  Exception/DecryptionException.cpp \
  Exception/DirectoryNotFoundException.cpp \
  Exception/DivideByZeroException.cpp \
  Exception/DomainException.cpp \
  Exception/DuplicateDirectoryException.cpp \
  Exception/DuplicateFileException.cpp \
  Exception/DuplicateGroupException.cpp \
  Exception/DuplicateNameException.cpp \
  Exception/DuplicateObjectException.cpp \
  Exception/DuplicateParameterException.cpp \
  Exception/DuplicateRepositoryException.cpp \
  Exception/DuplicateResourceDataException.cpp \
  Exception/DuplicateResourceException.cpp \
  Exception/DuplicateRoleException.cpp \
  Exception/DuplicateServerException.cpp \
  Exception/DuplicateSessionException.cpp \
  Exception/DuplicateUserException.cpp \
  Exception/DwfException.cpp \
  Exception/DwfSectionNotFoundException.cpp \
  Exception/DwfSectionResourceNotFoundException.cpp \
  Exception/EmptyFeatureSetException.cpp \
  Exception/EncryptionException.cpp \
  Exception/EndOfStreamException.cpp \
  Exception/EvaluationExpiredException.cpp \
  Exception/Exception.cpp \
  Exception/FdoException.cpp \
  Exception/FeatureServiceException.cpp \
  Exception/FileIoException.cpp \
  Exception/FileNotFoundException.cpp \
  Exception/GeometryException.cpp \
  Exception/GroupNotFoundException.cpp \
  Exception/IndexOutOfRangeException.cpp \
  Exception/InvalidArgumentException.cpp \
  Exception/InvalidCastException.cpp \
  Exception/InvalidCoordinateSystemException.cpp \
  Exception/InvalidCoordinateSystemTypeException.cpp \
  Exception/InvalidCoordinateSystemUnitsException.cpp \
  Exception/InvalidDwfPackageException.cpp \
  Exception/InvalidDwfSectionException.cpp \
  Exception/InvalidFeatureSourceException.cpp \
  Exception/InvalidIpAddressException.cpp \
  Exception/InvalidLicenseException.cpp \
  Exception/InvalidLogEntryException.cpp \
  Exception/InvalidMapDefinitionException.cpp \
  Exception/InvalidMimeTypeException.cpp \
  Exception/InvalidOperationException.cpp \
  Exception/InvalidOperationVersionException.cpp \
  Exception/InvalidPasswordException.cpp \
  Exception/InvalidPrintLayoutFontSizeUnitsException.cpp \
  Exception/InvalidPrintLayoutPositionUnitsException.cpp \
  Exception/InvalidPrintLayoutSizeUnitsException.cpp \
  Exception/InvalidPropertyTypeException.cpp \
  Exception/InvalidRepositoryNameException.cpp \
  Exception/InvalidRepositoryTypeException.cpp \
  Exception/InvalidResourceDataNameException.cpp \
  Exception/InvalidResourceDataTypeException.cpp \
  Exception/InvalidResourceNameException.cpp \
  Exception/InvalidResourcePathException.cpp \
  Exception/InvalidResourcePreProcessingTypeException.cpp \
  Exception/InvalidResourceTypeException.cpp \
  Exception/InvalidServerNameException.cpp \
  Exception/InvalidSerialNumberException.cpp \
  Exception/InvalidStreamHeaderException.cpp \
  Exception/IoException.cpp \
  Exception/LayerNotFoundException.cpp \
  Exception/LengthException.cpp \
  Exception/LicenseException.cpp \
  Exception/LicenseExpiredException.cpp \
  Exception/LogicException.cpp \
  Exception/LogOpenFailedException.cpp \
  Exception/NotFiniteNumberException.cpp \
  Exception/NotImplementedException.cpp \
  Exception/NullArgumentException.cpp \
  Exception/NullPropertyValueException.cpp \
  Exception/NullReferenceException.cpp \
  Exception/ObjectNotFoundException.cpp \
  Exception/OperationProcessingException.cpp \
  Exception/OutOfMemoryException.cpp \
  Exception/OutOfRangeException.cpp \
  Exception/OverflowException.cpp \
  Exception/ParameterNotFoundException.cpp \
  Exception/PathTooLongException.cpp \
  Exception/PermissionDeniedException.cpp \
  Exception/PlatformNotSupportedException.cpp \
  Exception/PortNotAvailableException.cpp \
  Exception/PrintToScaleModeNotSelectedException.cpp \
  Exception/RepositoryCreationFailedException.cpp \
  Exception/RepositoryNotFoundException.cpp \
  Exception/RepositoryNotOpenException.cpp \
  Exception/RepositoryOpenFailedException.cpp \
  Exception/ResourceDataNotFoundException.cpp \
  Exception/ResourceNotFoundException.cpp \
  Exception/ResourcesException.cpp \
  Exception/ResourcesLoadFailedException.cpp \
  Exception/ResourceTagNotFoundException.cpp \
  Exception/RoleNotFoundException.cpp \
  Exception/RuntimeException.cpp \
  Exception/ServerNotFoundException.cpp \
  Exception/ServerNotOnlineException.cpp \
  Exception/ServiceNotAvailableException.cpp \
  Exception/ServiceNotSupportedException.cpp \
  Exception/SessionExpiredException.cpp \
  Exception/StreamIoException.cpp \
  Exception/SystemException.cpp \
  Exception/TemporaryFileNotAvailableException.cpp \
  Exception/ThirdPartyException.cpp \
  Exception/UnauthorizedAccessException.cpp \
  Exception/UnclassifiedException.cpp \
  Exception/UnderflowException.cpp \
  Exception/UriFormatException.cpp \
  Exception/UserNotFoundException.cpp \
  Exception/XmlException.cpp \
  Exception/XmlParserException.cpp \
  Geometry/AgfReaderWriter.cpp \
  Geometry/AgfStream.cpp \
  Geometry/AggregateGeometry.cpp \
  Geometry/ArcSegment.cpp \
  Geometry/Coordinate.cpp \
  Geometry/CoordinateCollection.cpp \
  Geometry/CoordinateIterator.cpp \
  Geometry/CoordinateXY.cpp \
  Geometry/CoordinateXYM.cpp \
  Geometry/CoordinateXYZ.cpp \
  Geometry/CoordinateXYZM.cpp \
  Geometry/Curve.cpp \
  Geometry/CurvePolygon.cpp \
  Geometry/CurvePolygonCollection.cpp \
  Geometry/CurveRing.cpp \
  Geometry/CurveRingCollection.cpp \
  Geometry/CurveSegmentCollection.cpp \
  Geometry/CurveString.cpp \
  Geometry/CurveStringCollection.cpp \
  Geometry/Envelope.cpp \
  Geometry/GeometricEntity.cpp \
  Geometry/Geometry.cpp \
  Geometry/GeometryCollection.cpp \
  Geometry/GeometryFactory.cpp \
  Geometry/GeometryUtil.cpp \
  Geometry/LinearRing.cpp \
  Geometry/LinearRingCollection.cpp \
  Geometry/LinearSegment.cpp \
  Geometry/LineString.cpp \
  Geometry/LineStringCollection.cpp \
  Geometry/MultiCurvePolygon.cpp \
  Geometry/MultiCurveString.cpp \
  Geometry/MultiGeometry.cpp \
  Geometry/MultiLineString.cpp \
  Geometry/MultiPoint.cpp \
  Geometry/MultiPolygon.cpp \
  Geometry/Point.cpp \
  Geometry/PointCollection.cpp \
  Geometry/Polygon.cpp \
  Geometry/PolygonCollection.cpp \
  Geometry/Region.cpp \
  Geometry/Ring.cpp \
  Geometry/WktReaderWriter.cpp \
  Geometry/GeosUtil.cpp \
  Geometry/Buffer/BorderWalker.cpp \
  Geometry/Buffer/bufrutil.cpp \
  Geometry/Buffer/eventarr.cpp \
  Geometry/Buffer/FloatTransform.cpp \
  Geometry/Buffer/GreatCircleBufferUtil.cpp \
  Geometry/Buffer/interlst.cpp \
  Geometry/Buffer/interprc.cpp \
  Geometry/Buffer/LatLonBorderWalker.cpp \
  Geometry/Buffer/MgBuffer.cpp \
  Geometry/Buffer/ogeomtry.cpp \
  Geometry/Buffer/oobject.cpp \
  Geometry/Buffer/opline.cpp \
  Geometry/Buffer/opolygon.cpp \
  Geometry/Buffer/oppolygn.cpp \
  Geometry/Buffer/oppolyln.cpp \
  Geometry/Buffer/orpplygn.cpp \
  Geometry/Buffer/ortree.cpp \
  Geometry/Buffer/planeswp.cpp \
  Geometry/Buffer/plgnbufr.cpp \
  Geometry/Buffer/plinbufr.cpp \
  Geometry/Buffer/pobjbufr.cpp \
  Geometry/Buffer/ppgunion.cpp \
  Geometry/Buffer/progcbck.cpp \
  Geometry/Buffer/sedgaloc.cpp \
  Geometry/Buffer/sweepedg.cpp \
  Geometry/Buffer/tuplearr.cpp \
  Geometry/Buffer/vertaloc.cpp \
  Geometry/Buffer/wedgaloc.cpp \
  Geometry/Buffer/wedgearr.cpp \
  Geometry/Buffer/wingedge.cpp \
  Geometry/Buffer/worklist.cpp \
  Geometry/Buffer/xordtree.cpp \
  Geometry/Parse/ArrayHelper.cpp \
  Geometry/Parse/LexAwkt.cpp \
  Geometry/Parse/ParseAwkt.cpp \
  Geometry/Parse/ParseAwktUtil.cpp \
  Geometry/Parse/StringUtility.cpp \
  Geometry/Parse/yyAwkt.cpp \
  Geometry/Parse/yyAwkt_linux.cpp \
  Geometry/Spatial/MathUtility.cpp \
  Geometry/Spatial/SpatialUtility.cpp \
  Geometry/Spatial/SpatialUtilityCircularArc.cpp \
  MapLayer/ChangeList.cpp \
  MapLayer/Layer.cpp \
  MapLayer/LayerCollection.cpp \
  MapLayer/LayerGroup.cpp \
  MapLayer/LayerGroupCollection.cpp \
  MapLayer/Map.cpp \
  MapLayer/MapCollection.cpp \
  MapLayer/ObjectChange.cpp \
  MapLayer/Selection.cpp \
  MapLayer/ReadOnlyLayerCollection.cpp \
  Net/AceStreamHelper.cpp \
  Net/IOperationHandler.cpp \
  Net/MemoryStreamHelper.cpp \
  Net/Net.cpp \
  Net/PacketParser.cpp \
  Net/StreamData.cpp \
  Net/StreamHelper.cpp \
  Net/StreamParser.cpp \
  Services/BaseServiceDefs.cpp \
  Services/ClassDefinition.cpp \
  Services/ClassDefinitionCollection.cpp \
  Services/Command.cpp \
  Services/ConnectionProperties.cpp \
  Services/CreateSdfParams.cpp \
  Services/CustomLogoInfo.cpp \
  Services/CustomTextInfo.cpp \
  Services/DataPropertyDefinition.cpp \
  Services/DataReader.cpp \
  Services/DeleteFeatures.cpp \
  Services/DrawingDefs.cpp \
  Services/DrawingService.cpp \
  Services/DwfVersion.cpp \
  Services/FeatureAggregateOptions.cpp \
  Services/FeatureCommandCollection.cpp \
  Services/FeatureDefs.cpp \
  Services/FeatureInformation.cpp \
  Services/FeatureProperty.cpp \
  Services/FeatureQueryOptions.cpp \
  Services/FeatureReader.cpp \
  Services/FeatureSchema.cpp \
  Services/FeatureSchemaCollection.cpp \
  Services/FeatureService.cpp \
  Services/FeatureSet.cpp \
  Services/FeatureSourceParams.cpp \
  Services/GeometricPropertyDefinition.cpp \
  Services/GeometryProperty.cpp \
  Services/ImageFormats.cpp \
  Services/InsertFeatures.cpp \
  Services/LongTransactionData.cpp \
  Services/LongTransactionReader.cpp \
  Services/Layout.cpp \
  Services/MappingDefs.cpp \
  Services/MappingService.cpp \
  Services/MapPlot.cpp \
  Services/MapPlotCollection.cpp \
  Services/ObjectPropertyDefinition.cpp \
  Services/PackageStatusInformation.cpp \
  Services/PlotSpecification.cpp \
  Services/PrintLayout.cpp \
  Services/ProxyDataReader.cpp \
  Services/ProxyDrawingService.cpp \
  Services/ProxyFeatureReader.cpp \
  Services/ProxyFeatureService.cpp \
  Services/ProxyGwsFeatureReader.cpp \
  Services/ProxyMappingService.cpp \
  Services/ProxyRenderingService.cpp \
  Services/ProxyResourceService.cpp \
  Services/ProxySqlDataReader.cpp \
  Services/ProxyTileService.cpp \
  Services/Raster.cpp \
  Services/RasterProperty.cpp \
  Services/RasterPropertyDefinition.cpp \
  Services/RasterTypes.cpp \
  Services/RenderingDefs.cpp \
  Services/RenderingService.cpp \
  Services/Resource.cpp \
  Services/ResourceDefs.cpp \
  Services/ResourceIdentifier.cpp \
  Services/ResourceService.cpp \
  Services/ServerAdmin.cpp \
  Services/ServerAdminDefs.cpp \
  Services/ServerConnection.cpp \
  Services/ServerConnectionImp.cpp \
  Services/ServerConnectionPool.cpp \
  Services/ServerConnectionStack.cpp \
  Services/ServerInformation.cpp \
  Services/Service.cpp \
  Services/ServiceFactory.cpp \
  Services/Site.cpp \
  Services/SiteConnection.cpp \
  Services/SpatialContextData.cpp \
  Services/SpatialContextReader.cpp \
  Services/SqlDataReader.cpp \
  Services/TileDefs.cpp \
  Services/TileService.cpp \
  Services/UnitType.cpp \
  Services/UpdateFeatures.cpp \
  System/ConfigProperties.cpp \
  System/Configuration.cpp \
  System/ConfigurationHeap.cpp \
  System/ConfigurationSection.cpp \
  System/CryptographyManager.cpp \
  System/Disposable.cpp \
  System/GuardDisposable.cpp \
  System/NamedSerializable.cpp \
  System/Object.cpp \
  System/Resources.cpp \
  System/Serializable.cpp \
  System/Stream.cpp \
  System/StreamReader.cpp \
  System/StreamWriter.cpp \
  System/UserInformation.cpp \
  System/Warnings.cpp \
  Util/Byte.cpp \
  Util/FileUtil.cpp \
  Util/IpUtil.cpp \
  Util/Util.cpp \
  Util/XmlUtil.cpp

noinst_HEADERS = $(include_SOURCES) \
  AceCommon.h \
  Common.h \
  Controller/Controller.h \
  Controller/DwfController.h \
  Controller/HtmlController.h \
  CoordinateSystem/CoordinateSystem.h \
  CoordinateSystem/CoordinateSystemCommon.h \
  CoordinateSystem/CoordinateSystemFactory.h \
  CoordinateSystem/CoordinateSystemMeasure.h \
  CoordinateSystem/CoordinateSystemTransform.h \
  CoordinateSystem/CoordinateSystemType.h \
  Data/BatchPropertyCollection.h \
  Data/BlobProperty.h \
  Data/BooleanProperty.h \
  Data/ByteProperty.h \
  Data/ByteReader.h \
  Data/ByteSink.h \
  Data/ByteSource.h \
  Data/ByteSourceFileImpl.h \
  Data/ByteSourceImpl.h \
  Data/ByteSourceMemoryImpl.h \
  Data/ByteSourceSocketStreamImpl.h \
  Data/ByteSourceStreamImpl.h \
  Data/ClobProperty.h \
  Data/Collection.h \
  Data/Color.h \
  Data/ConfigurationSectionCollection.h \
  Data/DateTime.h \
  Data/DateTimeProperty.h \
  Data/DisposableCollection.h \
  Data/DoubleProperty.h \
  Data/FeaturePropertyType.h \
  Data/Int16Property.h \
  Data/Int32Property.h \
  Data/Int64Property.h \
  Data/IntCollection.h \
  Data/MimeType.h \
  Data/NamedCollection.h \
  Data/NullableProperty.h \
  Data/Property.h \
  Data/PropertyCollection.h \
  Data/PropertyDefinition.h \
  Data/PropertyDefinitionCollection.h \
  Data/PropertyType.h \
  Data/SerializableCollection.h \
  Data/SingleProperty.h \
  Data/StringCollection.h \
  Data/StringProperty.h \
  Data/StringPropertyCollection.h \
  Exception/ApplicationException.h \
  Exception/ArgumentOutOfRangeException.h \
  Exception/ArrayTypeMismatchException.h \
  Exception/AuthenticationFailedException.h \
  Exception/ClassNotFoundException.h \
  Exception/ConfigurationException.h \
  Exception/ConfigurationLoadFailedException.h \
  Exception/ConfigurationSaveFailedException.h \
  Exception/ConnectionFailedException.h \
  Exception/ConnectionNotOpenException.h \
  Exception/CoordinateSystemComputationFailedException.h \
  Exception/CoordinateSystemConversionFailedException.h \
  Exception/CoordinateSystemInitializationFailedException.h \
  Exception/CoordinateSystemMeasureFailedException.h \
  Exception/CoordinateSystemTransformFailedException.h \
  Exception/DateTimeException.h \
  Exception/DbException.h \
  Exception/DbXmlException.h \
  Exception/DecryptionException.h \
  Exception/DirectoryNotFoundException.h \
  Exception/DivideByZeroException.h \
  Exception/DomainException.h \
  Exception/DuplicateDirectoryException.h \
  Exception/DuplicateFileException.h \
  Exception/DuplicateGroupException.h \
  Exception/DuplicateNameException.h \
  Exception/DuplicateObjectException.h \
  Exception/DuplicateParameterException.h \
  Exception/DuplicateRepositoryException.h \
  Exception/DuplicateResourceDataException.h \
  Exception/DuplicateResourceException.h \
  Exception/DuplicateRoleException.h \
  Exception/DuplicateServerException.h \
  Exception/DuplicateSessionException.h \
  Exception/DuplicateUserException.h \
  Exception/DwfException.h \
  Exception/DwfSectionNotFoundException.h \
  Exception/DwfSectionResourceNotFoundException.h \
  Exception/EmptyFeatureSetException.h \
  Exception/EncryptionException.h \
  Exception/EndOfStreamException.h \
  Exception/EvaluationExpiredException.h \
  Exception/Exception.h \
  Exception/ExceptionDefs.h \
  Exception/FdoException.h \
  Exception/FeatureServiceException.h \
  Exception/FileIoException.h \
  Exception/FileNotFoundException.h \
  Exception/GeometryException.h \
  Exception/GroupNotFoundException.h \
  Exception/IndexOutOfRangeException.h \
  Exception/InvalidArgumentException.h \
  Exception/InvalidCastException.h \
  Exception/InvalidCoordinateSystemException.h \
  Exception/InvalidCoordinateSystemTypeException.h \
  Exception/InvalidCoordinateSystemUnitsException.h \
  Exception/InvalidDwfPackageException.h \
  Exception/InvalidDwfSectionException.h \
  Exception/InvalidFeatureSourceException.h \
  Exception/InvalidIpAddressException.h \
  Exception/InvalidLicenseException.h \
  Exception/InvalidLogEntryException.h \
  Exception/InvalidMapDefinitionException.h \
  Exception/InvalidMimeTypeException.h \
  Exception/InvalidOperationException.h \
  Exception/InvalidOperationVersionException.h \
  Exception/InvalidPasswordException.h \
  Exception/InvalidPrintLayoutFontSizeUnitsException.h \
  Exception/InvalidPrintLayoutPositionUnitsException.h \
  Exception/InvalidPrintLayoutSizeUnitsException.h \
  Exception/InvalidPropertyTypeException.h \
  Exception/InvalidRepositoryNameException.h \
  Exception/InvalidRepositoryTypeException.h \
  Exception/InvalidResourceDataNameException.h \
  Exception/InvalidResourceDataTypeException.h \
  Exception/InvalidResourceNameException.h \
  Exception/InvalidResourcePathException.h \
  Exception/InvalidResourcePreProcessingTypeException.h \
  Exception/InvalidResourceTypeException.h \
  Exception/InvalidServerNameException.h \
  Exception/InvalidSerialNumberException.h \
  Exception/InvalidStreamHeaderException.h \
  Exception/IoException.h \
  Exception/LayerNotFoundException.h \
  Exception/LengthException.h \
  Exception/LicenseException.h \
  Exception/LicenseExpiredException.h \
  Exception/LogicException.h \
  Exception/LogOpenFailedException.h \
  Exception/NotFiniteNumberException.h \
  Exception/NotImplementedException.h \
  Exception/NullArgumentException.h \
  Exception/NullPropertyValueException.h \
  Exception/NullReferenceException.h \
  Exception/ObjectNotFoundException.h \
  Exception/OperationProcessingException.h \
  Exception/OutOfMemoryException.h \
  Exception/OutOfRangeException.h \
  Exception/OverflowException.h \
  Exception/ParameterNotFoundException.h \
  Exception/PathTooLongException.h \
  Exception/PermissionDeniedException.h \
  Exception/PlatformNotSupportedException.h \
  Exception/PortNotAvailableException.h \
  Exception/PrintToScaleModeNotSelectedException.h \
  Exception/RepositoryCreationFailedException.h \
  Exception/RepositoryNotFoundException.h \
  Exception/RepositoryNotOpenException.h \
  Exception/RepositoryOpenFailedException.h \
  Exception/ResourceDataNotFoundException.h \
  Exception/ResourceNotFoundException.h \
  Exception/ResourcesException.h \
  Exception/ResourcesLoadFailedException.h \
  Exception/ResourceTagNotFoundException.h \
  Exception/RoleNotFoundException.h \
  Exception/RuntimeException.h \
  Exception/ServerNotFoundException.h \
  Exception/ServerNotOnlineException.h \
  Exception/ServiceNotAvailableException.h \
  Exception/ServiceNotSupportedException.h \
  Exception/SessionExpiredException.h \
  Exception/StreamIoException.h \
  Exception/SystemException.h \
  Exception/TemporaryFileNotAvailableException.h \
  Exception/ThirdPartyException.h \
  Exception/UnauthorizedAccessException.h \
  Exception/UnclassifiedException.h \
  Exception/UnderflowException.h \
  Exception/UriFormatException.h \
  Exception/UserNotFoundException.h \
  Exception/XmlException.h \
  Exception/XmlParserException.h \
  Geometry/AgfReaderWriter.h \
  Geometry/AgfStream.h \
  Geometry/AggregateGeometry.h \
  Geometry/ArcSegment.h \
  Geometry/CloseInstruction.h \
  Geometry/Coordinate.h \
  Geometry/CoordinateCollection.h \
  Geometry/CoordinateDimension.h \
  Geometry/CoordinateIterator.h \
  Geometry/CoordinateXY.h \
  Geometry/CoordinateXYM.h \
  Geometry/CoordinateXYZ.h \
  Geometry/CoordinateXYZM.h \
  Geometry/Curve.h \
  Geometry/CurvePolygon.h \
  Geometry/CurvePolygonCollection.h \
  Geometry/CurveRing.h \
  Geometry/CurveRingCollection.h \
  Geometry/CurveSegment.h \
  Geometry/CurveSegmentCollection.h \
  Geometry/CurveString.h \
  Geometry/CurveStringCollection.h \
  Geometry/Envelope.h \
  Geometry/GeometricDimension.h \
  Geometry/GeometricEntity.h \
  Geometry/GeometricEntityType.h \
  Geometry/GeometricPathInstruction.h \
  Geometry/GeometricPathInstructionType.h \
  Geometry/GeometricPathIterator.h \
  Geometry/Geometry.h \
  Geometry/GeometryCollection.h \
  Geometry/GeometryCommon.h \
  Geometry/GeometryExceptionDef.h \
  Geometry/GeometryComponent.h \
  Geometry/GeometryComponentCollection.h \
  Geometry/GeometryComponentType.h \
  Geometry/GeometryFactory.h \
  Geometry/GeometryType.h \
  Geometry/GeometryUtil.h \
  Geometry/LinearRing.h \
  Geometry/LinearRingCollection.h \
  Geometry/LinearSegment.h \
  Geometry/LineString.h \
  Geometry/LineStringCollection.h \
  Geometry/LineToInstruction.h \
  Geometry/Measure.h \
  Geometry/MoveToInstruction.h \
  Geometry/MultiCurvePolygon.h \
  Geometry/MultiCurveString.h \
  Geometry/MultiGeometry.h \
  Geometry/MultiLineString.h \
  Geometry/MultiPoint.h \
  Geometry/MultiPolygon.h \
  Geometry/Point.h \
  Geometry/PointCollection.h \
  Geometry/Polygon.h \
  Geometry/PolygonCollection.h \
  Geometry/QuadToInstruction.h \
  Geometry/Region.h \
  Geometry/Ring.h \
  Geometry/Transform.h \
  Geometry/GeosUtil.h \
  Geometry/WktReaderWriter.h \
  Geometry/Buffer/BorderWalker.h \
  Geometry/Buffer/buffer.h \
  Geometry/Buffer/bufraloc.h \
  Geometry/Buffer/bufrsort.h \
  Geometry/Buffer/bufrutil.h \
  Geometry/Buffer/eventarr.h \
  Geometry/Buffer/eventint.h \
  Geometry/Buffer/FloatTransform.h \
  Geometry/Buffer/GreatCircleBufferUtil.h \
  Geometry/Buffer/interlst.h \
  Geometry/Buffer/interprc.h \
  Geometry/Buffer/LatLonBorderWalker.h \
  Geometry/Buffer/MgBuffer.h \
  Geometry/Buffer/oarray.h \
  Geometry/Buffer/oextent.h \
  Geometry/Buffer/ogeomtry.h \
  Geometry/Buffer/olinep.h \
  Geometry/Buffer/oobject.h \
  Geometry/Buffer/opline.h \
  Geometry/Buffer/opoint.h \
  Geometry/Buffer/opolygnp.h \
  Geometry/Buffer/opolygon.h \
  Geometry/Buffer/oppolygn.h \
  Geometry/Buffer/oppolyln.h \
  Geometry/Buffer/opsprimitive.h \
  Geometry/Buffer/orpplygn.h \
  Geometry/Buffer/ortree.h \
  Geometry/Buffer/planeswp.h \
  Geometry/Buffer/plgnbufr.h \
  Geometry/Buffer/plinbufr.h \
  Geometry/Buffer/pobjbufr.h \
  Geometry/Buffer/ppgunion.h \
  Geometry/Buffer/progcbck.h \
  Geometry/Buffer/sedgaloc.h \
  Geometry/Buffer/sweepedg.h \
  Geometry/Buffer/tuplearr.h \
  Geometry/Buffer/vertaloc.h \
  Geometry/Buffer/wedgaloc.h \
  Geometry/Buffer/wedgearr.h \
  Geometry/Buffer/wingedge.h \
  Geometry/Buffer/worklist.h \
  Geometry/Buffer/xordtree.h \
  Geometry/Parse/Array.h \
  Geometry/Parse/ArrayHelper.h \
  Geometry/Parse/LexAwkt.h \
  Geometry/Parse/ParseAwkt.h \
  Geometry/Parse/ParseAwktUtil.h \
  Geometry/Parse/StringUtility.h \
  Geometry/Parse/yyAwkt.h \
  Geometry/Spatial/MathUtility.h \
  Geometry/Spatial/SpatialUtility.h \
  Geometry/Spatial/SpatialUtilityCircularArc.h \
  Geometry/Spatial/SpatialUtilityVectorAngle.h \
  MapLayer/ChangeList.h \
  MapLayer/Layer.h \
  MapLayer/LayerCollection.h \
  MapLayer/LayerGroup.h \
  MapLayer/LayerGroupCollection.h \
  MapLayer/LayerGroupType.h \
  MapLayer/LayerType.h \
  MapLayer/Map.h \
  MapLayer/MapCollection.h \
  MapLayer/ObjectChange.h \
  MapLayer/Selection.h \
  MapLayer/ReadOnlyLayerCollection.h \
  Net/AceStreamHelper.h \
  Net/ArgumentPacket.h \
  Net/BasicPacket.h \
  Net/BinaryStreamArgumentPacket.h \
  Net/CollectionPacket.h \
  Net/ControlPacket.h \
  Net/IOperationHandler.h \
  Net/MemoryStreamHelper.h \
  Net/Net.h \
  Net/OperationPacket.h \
  Net/OperationResponsePacket.h \
  Net/PacketParser.h \
  Net/PacketStructure.h \
  Net/StreamData.h \
  Net/StreamHelper.h \
  Net/StreamParser.h \
  Services/BaseService.h \
  Services/BaseServiceDefs.h \
  Services/ClassDefinition.h \
  Services/ClassDefinitionCollection.h \
  Services/Command.h \
  Services/ConnectionProperties.h \
  Services/CreateSdfParams.h \
  Services/CustomLogoInfo.h \
  Services/CustomTextInfo.h \
  Services/DataPropertyDefinition.h \
  Services/DataReader.h \
  Services/DeleteFeatures.h \
  Services/DrawingDefs.h \
  Services/DrawingService.h \
  Services/DwfVersion.h \
  Services/FeatureAggregateOptions.h \
  Services/FeatureCommand.h \
  Services/FeatureCommandCollection.h \
  Services/FeatureCommandType.h \
  Services/FeatureDefs.h \
  Services/FeatureGeometricType.h \
  Services/FeatureInformation.h \
  Services/FeatureProperty.h \
  Services/FeatureQueryOptions.h \
  Services/FeatureReader.h \
  Services/FeatureSchema.h \
  Services/FeatureSchemaCollection.h \
  Services/FeatureService.h \
  Services/FeatureServiceCommon.h \
  Services/FeatureSet.h \
  Services/FeatureSourceParams.h \
  Services/FeatureSpatialOperations.h \
  Services/GeometricPropertyDefinition.h \
  Services/GeometryProperty.h \
  Services/GwsFeatureReader.h \
  Services/ImageFormats.h \
  Services/InsertFeatures.h \
  Services/Layout.h \
  Services/LongTransactionData.h \
  Services/LongTransactionReader.h \
  Services/MappingDefs.h \
  Services/MappingService.h \
  Services/MapPlot.h \
  Services/MapPlotCollection.h \
  Services/MapPlotInstruction.h \
  Services/ObjectPropertyDefinition.h \
  Services/ObjectPropertyType.h \
  Services/OrderingOption.h \
  Services/PackageStatusInformation.h \
  Services/PlotSpecification.h \
  Services/PrintLayout.h \
  Services/ProxyDataReader.h \
  Services/ProxyDrawingService.h \
  Services/ProxyFeatureReader.h \
  Services/ProxyFeatureService.h \
  Services/ProxyGwsFeatureReader.h \
  Services/ProxyMappingService.h \
  Services/ProxyRenderingService.h \
  Services/ProxyResourceService.h \
  Services/ProxySqlDataReader.h \
  Services/ProxyTileService.h \
  Services/Raster.h \
  Services/RasterProperty.h \
  Services/RasterPropertyDefinition.h \
  Services/RasterTypes.h \
  Services/Reader.h \
  Services/ReaderType.h \
  Services/RenderingDefs.h \
  Services/RenderingService.h \
  Services/Resource.h \
  Services/ResourceDefs.h \
  Services/ResourceIdentifier.h \
  Services/ResourceService.h \
  Services/ServerAdmin.h \
  Services/ServerAdminDefs.h \
  Services/ServerConnection.h \
  Services/ServerConnectionImp.h \
  Services/ServerConnectionPool.h \
  Services/ServerConnectionStack.h \
  Services/ServerInformation.h \
  Services/Service.h \
  Services/ServiceFactory.h \
  Services/Site.h \
  Services/SiteConnection.h \
  Services/SpatialContextData.h \
  Services/SpatialContextExtentType.h \
  Services/SpatialContextReader.h \
  Services/SqlDataReader.h \
  Services/TileDefs.h \
  Services/TileService.h \
  Services/UnitType.h \
  Services/UpdateFeatures.h \
  System/ClassId.h \
  System/CommonDefs.h \
  System/ConfigProperties.h \
  System/Configuration.h \
  System/ConfigurationHeap.h \
  System/ConfigurationSection.h \
  System/CryptographyManager.h \
  System/Disposable.h \
  System/GuardDisposable.h \
  System/NamedSerializable.h \
  System/Object.h \
  System/Ptr.h \
  System/Resources.h \
  System/Serializable.h \
  System/Stream.h \
  System/StreamHeader.h \
  System/StreamReader.h \
  System/StreamWriter.h \
  System/UserInformation.h \
  System/Warnings.h \
  Util/Byte.h \
  Util/FileUtil.h \
  Util/IpUtil.h \
  Util/LinuxMemoryStatus.h \
  Util/Util.h \
  Util/XmlDefs.h \
  Util/XmlUtil.h

INCLUDES = \
  -IController \
  -ICoordinateSystem \
  -IData \
  -IException \
  -IGeometry \
  -IMapLayer \
  -INet \
  -IServices \
  -ISystem \
  -IUtil \
  -I../Security \
  -I../MdfParser \
  -I../MdfModel \
  -I../../Oem/ACE/ACE_wrappers \
  -I../../Oem/geos-2.2.0/source/headers \
  -I../../Oem/dbxml-2.2.13/xerces-c-src/src \
  -I../../Oem/proj-4.4.9/src \
  -I../../Oem/gdal-1.3.0/ogr \
  -I../../Oem/gdal-1.3.0/port \
  -I$(top_builddir)/$(map_coordsys_include_path)

libMgCommon_la_LIBADD = -lxerces-c \
  -lMgCoordinateSystem \
  ../../Oem/geos-2.2.0/source/geom/.libs/libgeos.a \
  ../Security/libMgSecurity.a

libMgCommon_la_LDFLAGS = -version-info 7:0:0 \
  -L../../Oem/dbxml-2.2.13/install/lib \
  -L$(top_builddir)/$(map_coordsys_dir_path)