AUTOMAKE_OPTIONS = foreign
SUBDIRS = $(map_coordsys_dir) Security Foundation Geometry PlatformBase MapGuideCommon MdfModel MdfParser Stylization
DIST_SUBDIRS = $(map_coordsys_dir) Security Foundation Geometry PlatformBase MapGuideCommon MdfModel MdfParser Stylization
EXTRA_DIST = ProductVersion.h Schema
