AUTOMAKE_OPTIONS = foreign
SUBDIRS = $(map_coordsys_dir) MdfModel MdfParser Security Foundation Geometry PlatformBase MapGuideCommon Stylization
DIST_SUBDIRS = $(map_coordsys_dir) MdfModel MdfParser Security Foundation Geometry PlatformBase MapGuideCommon Stylization
EXTRA_DIST = PlatformAPI.sln ProductVersion.h Schema
