AUTOMAKE_OPTIONS = foreign
SUBDIRS = $(map_coordsys_dir) MdfModel MdfParser Security Foundation Geometry PlatformBase MapGuideCommon Stylization Renderers
DIST_SUBDIRS = $(map_coordsys_dir) MdfModel MdfParser Security Foundation Geometry PlatformBase MapGuideCommon Stylization Renderers
EXTRA_DIST = ProductVersion.h Schema
